--- a/05-fragment-transitions/projects/starter/app/build.gradle
+++ b/05-fragment-transitions/projects/starter/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1"
+    implementation "com.google.android.material:material:1.4.0"
 
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
